Added 1.19.1+ compatibility
removed the pride tag resolver, and created a workaround so that it could work on all supported servers